--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<div>SW FUN APP</div>
+<div class="container">
+  <app-trooper name="trooper"></app-trooper>
+  <div class="btn">
+    <button mat-flat-button color="primary">Play</button>
+  </div>
+</div>
