--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <div class="container">
-  <app-trooper name="trooper"></app-trooper>
-  <div class="btn">
-    <button mat-flat-button color="primary">Play</button>
-  </div>
+  <router-outlet></router-outlet>
 </div>
