--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,7 +1,7 @@
 <div>
   <div>Game</div>
   <div class="container">
-    <app-card name="spaceship"></app-card>
-    <app-card name="joda"></app-card>
+    <app-card title="Spaceships"></app-card>
+    <app-card title="People"></app-card>
   </div>
 </div>
