add styles to card component

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -11,4 +11,13 @@
     align-items: center;
     justify-content: center;
   }
+  .title-container {
+    color: #fdfbff;
+    font-size: 32px;
+    display: flex;
+    justify-self: center;
+    p {
+      padding-right: 5px;
+    }
+  }
 }
