--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,7 +1,15 @@
-<div>
-  <div>Game</div>
-  <div class="container">
-    <app-card title="Spaceships"></app-card>
-    <app-card title="People"></app-card>
+<div class="game-container">
+  <div class="game-title">Select a resource you want to play with:</div>
+  <div class="game-cards">
+    <app-card
+      title="Spaceships"
+      titleIcon="rocket"
+      paragraphTitle="Play using Star Wars characters."
+    ></app-card>
+    <app-card
+      title="People"
+      titleIcon="person"
+      paragraphTitle="Play using Star Wars space crafts"
+    ></app-card>
   </div>
 </div>
