--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -5,10 +5,13 @@
     class="img-container"
   >
     <app-svg *ngIf="name; elseBlock" [name]="name"></app-svg>
-    <h4 *ngIf="title" style="color: #e3ddfd">{{ title }}</h4>
+    <div class="title-container" *ngIf="title">
+      <p>{{ title }}</p>
+      <app-svg *ngIf="titleIcon" [name]="titleIcon"></app-svg>
+    </div>
   </div>
   <mat-card-content>
-    <p>The name of the thing</p>
+    <p style="padding-top: 10px">{{ paragraphTitle }}</p>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Select</button>
