--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -1,3 +1,14 @@
-.container {
-  display: flex;
+.game {
+  &-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &-title {
+    font-size: 32px;
+    padding-bottom: 24px;
+  }
+  &-cards {
+    display: flex;
+  }
 }
