--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -11,9 +11,13 @@
     </div>
   </div>
   <mat-card-content>
-    <p style="padding-top: 10px">{{ paragraphTitle }}</p>
+    <p style="padding-top: 20px; font-size: 20px">{{ paragraphTitle }}</p>
   </mat-card-content>
+  <div style="flex-grow: 1"></div>
+  <mat-divider></mat-divider>
   <mat-card-actions>
-    <button mat-button>Select</button>
+    <button mat-flat-button class="custom-mat-button" (click)="emitType(gameType)">
+      {{ btnText }}
+    </button>
   </mat-card-actions>
 </mat-card>
