--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
 <app-svg name="trooper"></app-svg>
 <div class="btn-container">
-  <button mat-flat-button color="primary" routerLink="/game" (click)="goToGame()">Play</button>
+  <button mat-flat-button class="custom-mat-button" routerLink="/game" (click)="goToGame()">
+    Play
+  </button>
 </div>
