add logic to change game title based on type

--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,5 +1,5 @@
 <div class="game-container">
-  <div class="game-title">Select a resource you want to play with:</div>
+  <div class="game-title">{{ gameTopTitle }}</div>
   <div class="game-cards">
     <app-card
       *ngFor="let card of data?.gameType"
