add logic for getting data based on type and user

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -19,7 +19,7 @@
     <button
       mat-flat-button
       class="custom-mat-button"
-      (click)="emitType(gameType)"
+      (click)="emitType(gameType, user)"
       [disabled]="btnDisabled"
     >
       {{ btnText }}
