--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -5,19 +5,27 @@
   .img-container {
     min-height: 200px;
     background-color: #dae2f9;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
   }
   .title-container {
+    text-align: center;
+    line-height: 1.2;
+    width: 100%;
+    height: 100%;
     color: #fdfbff;
     font-size: 32px;
     display: flex;
     justify-self: center;
+    align-items: center;
     p {
       padding-right: 5px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
