--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -3,7 +3,7 @@
   <div class="game-cards">
     <app-card
       *ngFor="let el of data?.gameType"
-      [title]="el.title"
+      [title]="(el.title | async) || ''"
       [titleIcon]="el.titleIcon"
       [paragraphTitle]="el.paragraphTitle"
       [gameType]="el.gameType"
@@ -11,6 +11,18 @@
       (emitClick)="handleClick($event)"
       [btnDisabled]="el.btnDisabled | async"
       [user]="el.user"
+      [score]="el.score | async"
     ></app-card>
+  </div>
+  <div class="game-actions" *ngIf="resetStatus$ | async">
+    <button mat-flat-button class="custom-mat-button" (click)="resetGame()">Play again</button>
+    <button
+      *ngIf="switchTo$ | async as newGameType"
+      mat-flat-button
+      class="custom-mat-button"
+      (click)="switchGame(newGameType)"
+    >
+      Switch to {{ newGameType }}
+    </button>
   </div>
 </div>
