--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -11,4 +11,12 @@
   &-cards {
     display: flex;
   }
+  &-actions {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+    button:nth-child(2) {
+      margin-top: 8px;
+    }
+  }
 }
