--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -16,7 +16,14 @@
     <p style="padding-top: 20px; font-size: 20px">{{ paragraphTitle }}</p>
     <p *ngIf="score !== null">{{ score }}</p>
   </mat-card-content>
-  <div style="flex-grow: 1"></div>
+  <div style="flex-grow: 1">
+    <div *ngIf="user === 'one' && winner?.one">
+      <mat-card-content> Winner!!! </mat-card-content>
+    </div>
+    <div *ngIf="user === 'two' && winner?.two">
+      <mat-card-content> Winner!!! </mat-card-content>
+    </div>
+  </div>
   <mat-divider></mat-divider>
   <mat-card-actions>
     <button
